cmake_minimum_required(VERSION 3.26)
project(CppRepo1)

set(CMAKE_CXX_STANDARD 14)

add_executable(CppRepo1
        Arrays/BubbleSort.cpp
        Arrays/Introduction.cpp
        Arrays/MinimumElementinArray.cpp
        Basics/Basics1.cpp
        Basics/Basics2.cpp
        Basics/LargestOf3Numbers.cpp
        Basics/NumberPrinting.cpp
        Basics/NumberReversal.cpp
        Basics/PrintingCapitalAndNotCapital.cpp
        Basics/StudentMarks.cpp
        Basics/SwitchStatements.cpp
        OOPS/Encapsulation.cpp
        OOPS/Polymorphism.cpp)
